# clank.sh

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
clank-acceptance/: Cargo.toml
clank-acceptance/cases/builtins/: alias.yaml  ask.yaml  break.yaml  cd.yaml  context.yaml  continue.yaml  declare.yaml  dot.yaml  echo.yaml  eval.yaml  exit.yaml  export.yaml  false.yaml  getopts.yaml  hash.yaml  local.yaml  ls.yaml  pwd.yaml  read.yaml  return.yaml  set.yaml  shift.yaml  test.yaml  true.yaml  type.yaml  unalias.yaml  unset.yaml
clank-acceptance/cases/exit_codes/: basic.yaml
clank-acceptance/cases/scripting/: multi-command-stdin.yaml  pipelines.yaml
clank-acceptance/tests/: acceptance.rs
clank-ask/: Cargo.toml
clank-ask/src/: lib.rs
clank-builtins/: Cargo.toml
clank-builtins/src/: lib.rs
clank-core/: Cargo.toml
clank-core/src/: lib.rs
clank-core/tests/: ask.rs  shell_builder.rs
clank-http/: Cargo.toml
clank-http/src/: lib.rs
clank-shell/: Cargo.toml
clank-shell/src/: main.rs
dev-docs/designs/approved/: ask-command.md  execution-scope-dispatch.md  initial-workspace.md  interactive-shell-repl-loop.md  multi-tier-test-infrastructure.md
dev-docs/issues/closed/: ask-command.md  execution-scope-dispatch.md  initial-workspace-bootstrap.md  interactive-shell-repl-loop.md  multi-tier-test-infrastructure.md
dev-docs/issues/open/: brush-wasm-portability.md  transcript-redaction.md
dev-docs/plans/approved/: initial-workspace-bootstrap.md  multi-tier-test-infrastructure.md
dev-docs/plans/done/: ask-command.md  execution-scope-dispatch.md  interactive-shell-repl-loop.md
dev-docs/research/: brush-embedding-api.md  rust-multi-tier-testing.md  rust-sensitive-data-redaction.md  wasm-toolchain-and-golem.md  wasm32-wasip2-toolchain-setup.md
