[package]
name    = "clank-acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
datatest-stable = "0.3"
serde           = { version = "1", features = ["derive"] }
serde_yaml_ng   = "0.10"

[[test]]
name    = "acceptance"
path    = "tests/acceptance.rs"
harness = false
