[package]
name    = "clank-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Native-only HTTP client. Gated by target so WASM targets can compile the
# crate without pulling in reqwest's native OS dependencies.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio   = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
